create login function

--- a/apps/login.html
+++ b/apps/login.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-<meta charset="UTF-8">
-<title>ログイン画面</title>
+	<meta charset="UTF-8">
+	<title>ログイン画面</title>
 </head>
 <body>
+<h1>ログイン画面</h1>
 <form action="user_login.php" method="post">
-<label>ユーザ名</label><input type="text" name="name" id="name">
+<p><label>ユーザID : </label><input type="text" name="name" id="name"></p>
+<p><label>パスワード : </label><input type="text" name="password" id="password"></p>
 <input type="submit" value="ログイン">
 </form>
 </body>
